remove delayed job cleanup api used in debugging
